service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retail-store-app
spec:
  selector:
    app: retail-store-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
